--- a/Code/OrganizationOfData.DesktopClient/Views/NewFileWindow.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/NewFileWindow.xaml
@@ -6,10 +6,8 @@
         xmlns:local="clr-namespace:OrganizationOfData.DesktopClient.Views"
         xmlns:viewModels="clr-namespace:OrganizationOfData.DesktopClient.ViewModels"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:md="https://github.com/fantasticfiasco/mvvm-dialogs"
-        md:DialogServiceViews.IsRegistered="True"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance {x:Type viewModels:MainWindowViewModel}}"
+        d:DataContext="{d:DesignInstance {x:Type viewModels:NewFileWindowViewModel}}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="13"
@@ -19,6 +17,11 @@
         FontFamily="{DynamicResource MaterialDesignFont}"
         Title="Nova datoteka" Height="450" Width="800" ResizeMode="NoResize">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+            <Button Command="{Binding Zavrsi}" Content="sadasd" />
+        <Button Grid.Row="1" Command="{Binding ZavrsiBez}" Content="sad" />
     </Grid>
 </Window>
