--- a/Code/OrganizationOfData.DesktopClient/Views/NewFileWindow.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/NewFileWindow.xaml
@@ -5,6 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OrganizationOfData.DesktopClient.Views"
         xmlns:viewModels="clr-namespace:OrganizationOfData.DesktopClient.ViewModels"
+        xmlns:system="clr-namespace:System;assembly=mscorlib"
+        xmlns:windows="clr-namespace:OrganizationOfData.Windows;assembly=OrganizationOfData.Windows"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance {x:Type viewModels:NewFileWindowViewModel}}"
@@ -16,12 +18,81 @@
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
         Title="Nova datoteka" Height="450" Width="800" ResizeMode="NoResize">
+    <Window.Resources>
+        <ResourceDictionary>
+            <windows:BulkFileTypeConverter x:Key="bulkFileTypeConverter" />
+            <ObjectDataProvider x:Key="bulkFileTypes" MethodName="GetValues" ObjectType="{x:Type system:Enum}">
+                <ObjectDataProvider.MethodParameters>
+                    <x:Type TypeName="windows:BulkFileType"/>
+                </ObjectDataProvider.MethodParameters>
+            </ObjectDataProvider>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-            <Button Command="{Binding Zavrsi}" Content="sadasd" />
-        <Button Grid.Row="1" Command="{Binding ZavrsiBez}" Content="sad" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <materialDesign:Card Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource SecondaryAccentBrush}" Margin="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+
+            <StackPanel Margin="10" Grid.ColumnSpan="2" Orientation="Horizontal" VerticalAlignment="Center">
+                <materialDesign:PackIcon Kind="FilePlus" Width="50" Height="50" Margin="0 0 20 0" />
+                <TextBlock VerticalAlignment="Center" Style="{StaticResource MaterialDesignDisplay1TextBlock}">
+                    Nova datoteka
+                </TextBlock>
+            </StackPanel>
+        </materialDesign:Card>
+
+        <ComboBox Grid.Row="1" ItemsSource="{Binding Source={StaticResource bulkFileTypes}}" Width="225" materialDesign:HintAssist.Hint="Vrsta datoteke" Style="{StaticResource MaterialDesignFloatingHintComboBox}" SelectedItem="{Binding BulkFileType}">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Converter={StaticResource bulkFileTypeConverter}}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+
+        <TextBox Grid.Row="2" Width="150" materialDesign:HintAssist.Hint="Broj baketa" Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center">
+            <TextBox.Text>
+                <Binding Path="BulkFile.NumberOfBuckets" ValidatesOnDataErrors="True" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
+                    <Binding.ValidationRules>
+                       <windows:IntegerValidation/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
+        <TextBox Grid.Row="3" Width="150" materialDesign:HintAssist.Hint="Faktor baketiranja" Style="{StaticResource MaterialDesignFloatingHintTextBox}" VerticalAlignment="Center">
+            <TextBox.Text>
+                <Binding Path="BulkFile.Factor" ValidatesOnDataErrors="True" UpdateSourceTrigger="PropertyChanged">
+                    <Binding.ValidationRules>
+                        <windows:IntegerValidation />
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
+
+        <GroupBox Header="Metoda transformacije" Margin="16" Grid.Row="1" Grid.Column="2" Grid.RowSpan="3" HorizontalAlignment="Center">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                
+                <RadioButton Grid.Row="0" Style="{StaticResource MaterialDesignRadioButton}" VerticalAlignment="Center" Content="Metoda ostataka pri deljenju" IsChecked="True" />
+                <RadioButton Grid.Row="1" Style="{StaticResource MaterialDesignRadioButton}" VerticalAlignment="Center" Content="Metoda centralnih cifara kljuca" />
+                <RadioButton Grid.Row="2" Style="{StaticResource MaterialDesignRadioButton}" VerticalAlignment="Center" Content="Metoda preklapanja" />
+            </Grid>
+        </GroupBox>
+
+        <Button Grid.Row="4" Grid.Column="0" Width="100" Command="{Binding CreateNewFileCommand}" Content="Stvori" HorizontalAlignment="Center" />
+        <Button Grid.Row="4" Grid.Column="1" Width="100" Command="{Binding CancelCommand}" Content="Odustani" HorizontalAlignment="Center" />
     </Grid>
 </Window>
