--- a/Code/OrganizationOfData.DesktopClient/Views/MainWindow.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/MainWindow.xaml
@@ -18,6 +18,11 @@
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
         Title="MainWindow" Height="720" Width="1280" WindowState="Maximized">
+    <Window.Resources>
+        <DataTemplate x:Key="BucketControl">
+            <local:BucketControl />
+        </DataTemplate>
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
@@ -102,7 +107,7 @@
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
 
-                <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueMidBrush}" Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}" Margin="5" Padding="10" Grid.RowSpan="2" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueMidBrush}" Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}" Margin="5" Padding="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                     <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                         <local:PrimaryZoneControl DataContext="{Binding PrimaryZoneControlViewModel}" />
                     </ScrollViewer>
@@ -114,11 +119,11 @@
                     </ScrollViewer>
                 </GroupBox>
 
-                <GroupBox Header="Zona prekoracenja" Style="{DynamicResource MaterialDesignGroupBox}" Margin="10" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" materialDesign:ShadowAssist.ShadowDepth="Depth3" BorderThickness="0">
+                <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueMidBrush}" Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}" Margin="5" Padding="10" Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                     <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                        <local:BucketControl DataContext="{Binding BucketControlViewModel}" Margin="0 0 0 10" />
+                        <local:OverrunZoneControl DataContext="{Binding OverrunZoneControlViewModel}" />
                     </ScrollViewer>
-                </GroupBox>
+                </materialDesign:Card>
 
                 <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueDarkBrush}" Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}" Margin="10" Grid.Row="0" Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                     <Grid>
