--- a/Code/OrganizationOfData.DesktopClient/Views/OverrunZoneControl.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/OverrunZoneControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="OrganizationOfData.DesktopClient.Views.PrimaryZoneControl"
+﻿<UserControl x:Class="OrganizationOfData.DesktopClient.Views.OverrunZoneControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,7 +7,7 @@
              xmlns:viewModels="clr-namespace:OrganizationOfData.DesktopClient.ViewModels"
             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
             mc:Ignorable="d"
-            d:DataContext="{d:DesignInstance {x:Type viewModels:PrimaryZoneControlViewModel}}"
+            d:DataContext="{d:DesignInstance {x:Type viewModels:OverrunZoneControlViewModel}}"
             TextElement.Foreground="{DynamicResource MaterialDesignBody}"
             TextElement.FontWeight="Regular"
             TextElement.FontSize="13"
