--- a/Code/OrganizationOfData.DesktopClient/Views/NewFileWindow.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/NewFileWindow.xaml
@@ -57,7 +57,7 @@
             </StackPanel>
         </materialDesign:Card>
 
-        <ComboBox Grid.Row="1" ItemsSource="{Binding Source={StaticResource bulkFileTypes}}" Width="225" materialDesign:HintAssist.Hint="Vrsta datoteke" Style="{StaticResource MaterialDesignFloatingHintComboBox}" SelectedItem="{Binding BulkFileType}">
+        <ComboBox Grid.Row="1" ItemsSource="{Binding Source={StaticResource bulkFileTypes}}" Width="225" materialDesign:HintAssist.Hint="Zona prekoračenja" Style="{StaticResource MaterialDesignFloatingHintComboBox}" SelectedItem="{Binding BulkFileType}">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding Converter={StaticResource bulkFileTypeConverter}}"/>
@@ -92,7 +92,7 @@
             </ComboBox.ItemTemplate>
         </ComboBox>
 
-        <Button Grid.Row="4" Grid.Column="0" Width="100" Command="{Binding CreateNewFileCommand}" Content="Stvori" HorizontalAlignment="Center">
+        <Button Grid.Row="4" Grid.Column="0" Width="100" Command="{Binding CreateNewFileCommand}" Content="Potvrdi" HorizontalAlignment="Center">
             <Button.Style>
                 <Style BasedOn="{StaticResource MaterialDesignRaisedButton}" TargetType="Button">
                     <Setter Property="IsEnabled" Value="False"/>
