--- a/Code/OrganizationOfData.DesktopClient/Views/MainWindow.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/MainWindow.xaml
@@ -56,7 +56,7 @@
 
         <Image Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Source="pack://application:,,,/Resources/ftn.png" Margin="5" />
 
-        <materialDesign:ColorZone Mode="Accent" Padding="5" Grid.Row="2" Grid.ColumnSpan="2" Margin="10" materialDesign:ShadowAssist.ShadowDepth="Depth2">
+        <materialDesign:ColorZone Mode="Primary" Padding="5" Grid.Row="2" Grid.ColumnSpan="2" Margin="10" materialDesign:ShadowAssist.ShadowDepth="Depth2">
             <StackPanel Orientation="Horizontal">
                 <Button Style="{StaticResource MaterialDesignToolForegroundButton}" Width="Auto" Height="Auto" Margin="10 3 10 3" Command="{Binding ShowScalesCommand}">
                     <StackPanel Orientation="Horizontal">
@@ -127,18 +127,22 @@
 
                 <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueDarkBrush}" Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}" Margin="10" Grid.Row="0" Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                     <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="0*"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <TextBlock Padding="8" FontSize="20" Text="{Binding}"/>
-                        <Button Style="{StaticResource MaterialDesignRaisedAccentButton}" HorizontalAlignment="Right" Margin="0 0 10 10" Grid.Row="1">
+                        <TextBlock Padding="8" FontSize="20" Text="{Binding}" Grid.ColumnSpan="2"/>
+                        <Button Style="{StaticResource MaterialDesignRaisedAccentButton}" HorizontalAlignment="Right" Margin="0 0 10 10" Grid.Row="1" Grid.ColumnSpan="2">
                             Sledeći korak
                         </Button>
                     </Grid>
                 </materialDesign:Card>
             </Grid>
         </ScrollViewer>
-        
+
     </Grid>
 </Window>
