--- a/Code/OrganizationOfData.DesktopClient/Views/MainWindow.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/MainWindow.xaml
@@ -50,13 +50,30 @@
             </MenuItem>
         </Menu>
 
-        <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueDarkBrush}" Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}" Margin="5" Grid.Row="1" Grid.Column="0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-            <TextBlock Padding="8" FontSize="20" Text=""/>
+        <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueDarkBrush}" Margin="10" Grid.Row="1" Padding="15" Grid.Column="0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Label Grid.Row="0"  Content="Tip datoteke:" VerticalAlignment="Center" Foreground="{DynamicResource SecondaryAccentBrush}" />
+                <Label Grid.Row="1"  Content="Faktor baketiranja:"  VerticalAlignment="Center" Foreground="{DynamicResource SecondaryAccentBrush}" />
+                <Label Grid.Row="2"  Content="Broj blokova:"  VerticalAlignment="Center" Foreground="{DynamicResource SecondaryAccentBrush}" />
+                <Label Grid.Row="0"  Grid.Column="1" Content="{Binding}"  VerticalAlignment="Center" Foreground="{DynamicResource SecondaryAccentBrush}" />
+                <Label Grid.Row="1"  Grid.Column="1" Content="{Binding BulkFile.Factor}"  VerticalAlignment="Center" Foreground="{DynamicResource SecondaryAccentBrush}" />
+                <Label Grid.Row="2"  Grid.Column="1" Content="{Binding BulkFile.NumberOfBuckets}" VerticalAlignment="Center" Foreground="{DynamicResource SecondaryAccentBrush}" />
+            </Grid>
         </materialDesign:Card>
 
         <Image Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Source="pack://application:,,,/Resources/ftn.png" Margin="5" />
 
-        <materialDesign:ColorZone Mode="Primary" Padding="5" Grid.Row="2" Grid.ColumnSpan="2" Margin="10" materialDesign:ShadowAssist.ShadowDepth="Depth2">
+        <materialDesign:ColorZone Mode="PrimaryMid" Padding="5" Grid.Row="2" Grid.ColumnSpan="2" Margin="10" materialDesign:ShadowAssist.ShadowDepth="Depth2">
             <StackPanel Orientation="Horizontal">
                 <Button Style="{StaticResource MaterialDesignToolForegroundButton}" Width="Auto" Height="Auto" Margin="10 3 10 3" Command="{Binding ShowScalesCommand}">
                     <StackPanel Orientation="Horizontal">
@@ -113,7 +130,7 @@
                     </ScrollViewer>
                 </materialDesign:Card>
 
-                <GroupBox Header="Memorija" Style="{DynamicResource MaterialDesignGroupBox}" Margin="10" Grid.Row="1" Grid.Column="1" materialDesign:ShadowAssist.ShadowDepth="Depth3" BorderThickness="2">
+                <GroupBox Header="Memorija" Style="{DynamicResource MaterialDesignGroupBox}" Margin="5" Grid.Row="1" Grid.Column="1" materialDesign:ShadowAssist.ShadowDepth="Depth3" BorderThickness="2">
                     <ScrollViewer HorizontalScrollBarVisibility="Auto" Grid.Row="1" Grid.Column="1" VerticalScrollBarVisibility="Hidden">
                         <local:BucketControl DataContext="{Binding BucketControlViewModel}" Margin="0 0 0 10" />
                     </ScrollViewer>
@@ -125,7 +142,7 @@
                     </ScrollViewer>
                 </materialDesign:Card>
 
-                <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueDarkBrush}" Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}" Margin="10" Grid.Row="0" Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueDarkBrush}" Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}" Margin="5" Grid.Row="0" Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="0*"/>
