--- a/Code/OrganizationOfData.DesktopClient/Views/AuthorsWindow.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/AuthorsWindow.xaml
@@ -4,8 +4,18 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OrganizationOfData.DesktopClient.Views"
+        xmlns:viewModels="clr-namespace:OrganizationOfData.DesktopClient.ViewModels"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="AuthorsWindow" Height="450" Width="800">
+        d:DataContext="{d:DesignInstance {x:Type viewModels:AuthorsWindowViewModel}}"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal"
+        TextOptions.TextRenderingMode="Auto"
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{DynamicResource MaterialDesignFont}"
+        Title="Autori" Height="400" Width="850">
     <Grid>
         
     </Grid>
