--- a/Code/OrganizationOfData.DesktopClient/Views/AuthorsWindow.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/AuthorsWindow.xaml
@@ -13,10 +13,12 @@
         TextElement.FontSize="13"
         TextOptions.TextFormattingMode="Ideal"
         TextOptions.TextRenderingMode="Auto"
-        Background="{DynamicResource MaterialDesignPaper}"
+        Background="Transparent"
         FontFamily="{DynamicResource MaterialDesignFont}"
-        Title="Autori" Height="400" Width="850">
-    <Grid>
-        
-    </Grid>
+        Title="Autori" Height="400" Width="850" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" WindowStyle="None" AllowsTransparency="True">
+    <Border BorderThickness="0" CornerRadius="10" Background="White">
+        <Grid>
+
+        </Grid>
+    </Border>
 </Window>
